tests/tooling/fixtures/native/recovery/negative/negative_do_while_condition_function_value.objc3
// Expected diagnostic code(s): O3S206.
module NegativeDoWhileConditionFunctionValue;

fn ready() -> bool {
  return true;
}

fn main() -> i32 {
  do {
    let i = 1;
  } while (ready);
  return 0;
}

